--- a/index.html
+++ b/index.html
@@ -27,6 +27,12 @@ body{background:var(--bg);color:var(--text);font-family:'DM Sans',sans-serif;fon
 .logo-mark{width:32px;height:32px;background:var(--accent);border-radius:6px;display:flex;align-items:center;justify-content:center;font-family:'IBM Plex Mono',monospace;font-size:12px;font-weight:600;color:var(--bg)}
 .logo-text{font-family:'IBM Plex Mono',monospace;font-size:11px;letter-spacing:.1em;text-transform:uppercase;color:var(--muted)}
 .topnav-meta{display:flex;gap:20px;align-items:center}
+.topnav-progress{display:flex;align-items:center;gap:12px;padding-left:20px;border-left:1px solid var(--border)}
+.topnav-progress-label{font-family:'IBM Plex Mono',monospace;font-size:10px;letter-spacing:.08em;text-transform:uppercase;color:var(--muted);white-space:nowrap}
+.topnav-progress-bar{width:100px;height:3px;background:var(--border);border-radius:2px;overflow:hidden}
+.topnav-progress-fill{height:100%;background:var(--accent);border-radius:2px;transition:width .6s ease;width:0%}
+.topnav-progress-count{font-family:'IBM Plex Mono',monospace;font-size:10px;color:var(--muted);white-space:nowrap}
+.topnav-progress-count span{color:var(--accent)}
 .meta-chip{font-family:'IBM Plex Mono',monospace;font-size:10px;letter-spacing:.06em;background:var(--pill);color:var(--muted);padding:4px 10px;border-radius:4px;border:1px solid var(--border-hi)}
 .meta-chip span{color:var(--text)}
 
@@ -149,6 +155,12 @@ body{background:var(--bg);color:var(--text);font-family:'DM Sans',sans-serif;fon
     <span class="meta-chip">AWS Free Tier</span>
     <span class="meta-chip">Target: <span>SCS-C02</span></span>
   </div>
+  <div class="topnav-progress">
+    <span class="topnav-progress-label">Progress</span>
+    <div class="topnav-progress-bar"><div class="topnav-progress-fill" id="topnav-fill"></div></div>
+    <span class="topnav-progress-count"><span id="topnav-done">0</span>/28</span>
+    <button class="reset-btn" style="margin-left:0" onclick="openResetModal()">↺ Reset</button>
+  </div>
 </header>
 
 <!-- HERO -->
@@ -164,13 +176,7 @@ body{background:var(--bg);color:var(--text);font-family:'DM Sans',sans-serif;fon
   </div>
 </section>
 
-<!-- OVERALL PROGRESS -->
-<div class="progress-overview">
-  <span class="progress-overview-label">Overall Progress</span>
-  <div class="progress-overview-bar"><div class="progress-overview-fill" id="overall-fill"></div></div>
-  <span class="progress-overview-count"><span id="overall-done">0</span> / 28 days complete</span>
-  <button class="reset-btn" onclick="openResetModal()">↺ Reset Progress</button>
-</div>
+
 
 <!-- Reset confirmation modal -->
 <div class="reset-modal-overlay" id="reset-modal">
@@ -315,7 +321,7 @@ body{background:var(--bg);color:var(--text);font-family:'DM Sans',sans-serif;fon
     <div class="resource-title">CIS AWS Benchmark</div>
     <div class="resource-desc">CIS AWS Foundations v1.4.0 — 60+ controls</div>
   </div>
-  <div class="resource-card" onclick="window.open('resources/glossary.md','_blank')">
+  <div class="resource-card" onclick="window.open('docs/glossary.html','_blank')">
     <div class="resource-icon">📖</div>
     <div class="resource-title">Glossary</div>
     <div class="resource-desc">Key terms: CSPM, CIEM, CNAPP, SOAR, and more</div>
@@ -353,8 +359,8 @@ function computeProgress(){
 
 function updateProgressBar(){
   const done = computeProgress();
-  document.getElementById('overall-done').textContent = done;
-  document.getElementById('overall-fill').style.width = (done/DAYS*100)+'%';
+  document.getElementById('topnav-done').textContent = done;
+  document.getElementById('topnav-fill').style.width = (done/DAYS*100)+'%';
 
   // Mark completed day cards
   document.querySelectorAll('.day-card.available').forEach(card=>{
@@ -391,8 +397,8 @@ function confirmReset(){
     const statusEl=card.querySelector('.day-status');
     if(statusEl&&card.classList.contains('available')){statusEl.className='day-status available';statusEl.textContent='→ Open';}
   });
-  document.getElementById('overall-done').textContent='0';
-  document.getElementById('overall-fill').style.width='0%';
+  document.getElementById('topnav-done').textContent='0';
+  document.getElementById('topnav-fill').style.width='0%';
 }
 // Close modal on overlay click
 document.getElementById('reset-modal').addEventListener('click',function(e){if(e.target===this)closeResetModal();});
