--- a/index.html
+++ b/index.html
@@ -22,13 +22,19 @@ html{scroll-behavior:smooth}
 body{background:var(--bg);color:var(--text);font-family:'DM Sans',sans-serif;font-weight:300;font-size:15px;line-height:1.75;min-height:100vh;overflow-x:hidden}
 
 /* ── Top nav ── */
-.topnav{display:flex;align-items:center;justify-content:space-between;padding:18px 48px;border-bottom:1px solid var(--border);background:var(--surface);position:sticky;top:0;z-index:50}
-.topnav-logo{display:flex;align-items:center;gap:12px}
+.topnav{display:flex;align-items:center;padding:12px 48px;border-bottom:1px solid var(--border);background:var(--surface);position:sticky;top:0;z-index:50;gap:16px;flex-wrap:wrap}
+.topnav-logo{display:flex;align-items:center;gap:12px;flex-shrink:0}
 .logo-mark{width:32px;height:32px;background:var(--accent);border-radius:6px;display:flex;align-items:center;justify-content:center;font-family:'IBM Plex Mono',monospace;font-size:12px;font-weight:600;color:var(--bg)}
 .logo-text{font-family:'IBM Plex Mono',monospace;font-size:11px;letter-spacing:.1em;text-transform:uppercase;color:var(--muted)}
-.topnav-meta{display:flex;gap:20px;align-items:center}
+.topnav-meta{display:flex;gap:10px;align-items:center;flex:1;justify-content:center;flex-wrap:wrap}
 .meta-chip{font-family:'IBM Plex Mono',monospace;font-size:10px;letter-spacing:.06em;background:var(--pill);color:var(--muted);padding:4px 10px;border-radius:4px;border:1px solid var(--border-hi)}
 .meta-chip span{color:var(--text)}
+.topnav-progress{display:flex;align-items:center;gap:10px;flex-shrink:0}
+.topnav-progress-label{font-family:'IBM Plex Mono',monospace;font-size:10px;letter-spacing:.08em;text-transform:uppercase;color:var(--muted);white-space:nowrap}
+.topnav-progress-bar{width:100px;height:3px;background:var(--border);border-radius:2px;overflow:hidden}
+.topnav-progress-fill{height:100%;background:var(--accent);border-radius:2px;transition:width .6s ease;width:0%}
+.topnav-progress-count{font-family:'IBM Plex Mono',monospace;font-size:11px;color:var(--muted);white-space:nowrap}
+.topnav-progress-count span{color:var(--accent)}
 
 /* ── Hero ── */
 .hero{padding:72px 48px 56px;border-bottom:1px solid var(--border);max-width:1000px}
@@ -149,6 +155,12 @@ body{background:var(--bg);color:var(--text);font-family:'DM Sans',sans-serif;fon
     <span class="meta-chip">AWS Free Tier</span>
     <span class="meta-chip">Target: <span>SCS-C02</span></span>
   </div>
+  <div class="topnav-progress">
+    <span class="topnav-progress-label">Progress</span>
+    <div class="topnav-progress-bar"><div class="topnav-progress-fill" id="topnav-fill"></div></div>
+    <span class="topnav-progress-count"><span id="topnav-done">0</span>/28</span>
+    <button class="reset-btn" onclick="openResetModal()">↺ Reset</button>
+  </div>
 </header>
 
 <!-- HERO -->
@@ -164,13 +176,6 @@ body{background:var(--bg);color:var(--text);font-family:'DM Sans',sans-serif;fon
   </div>
 </section>
 
-<!-- OVERALL PROGRESS -->
-<div class="progress-overview">
-  <span class="progress-overview-label">Overall Progress</span>
-  <div class="progress-overview-bar"><div class="progress-overview-fill" id="overall-fill"></div></div>
-  <span class="progress-overview-count"><span id="overall-done">0</span> / 28 days complete</span>
-  <button class="reset-btn" onclick="openResetModal()">↺ Reset Progress</button>
-</div>
 
 <!-- Reset confirmation modal -->
 <div class="reset-modal-overlay" id="reset-modal">
@@ -354,8 +359,10 @@ function computeProgress(){
 
 function updateProgressBar(){
   const done = computeProgress();
-  document.getElementById('overall-done').textContent = done;
-  document.getElementById('overall-fill').style.width = (done/DAYS*100)+'%';
+  var od=document.getElementById('overall-done');if(od)od.textContent=done;
+  var of2=document.getElementById('overall-fill');if(of2)of2.style.width=(done/DAYS*100)+'%';
+  var td=document.getElementById('topnav-done');if(td)td.textContent=done;
+  var tf=document.getElementById('topnav-fill');if(tf)tf.style.width=(done/DAYS*100)+'%';
 
   // Mark completed day cards
   document.querySelectorAll('.day-card.available').forEach(card=>{
